<?xml version="1.0"?>
<package format="2">
  <name>zybozoombo</name>
  <version>2.0.2</version>
  <description>Package for zybo-based robotic vehicle</description>
  <maintainer email="adejonge@oakland.edu">abc</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
