<?xml version="1.0"?>
<package format="2">
  <name>zybozoombo</name>
  <version>2.0.2</version>
  <description>Package for zybo-based robotic vehicle</description>
  <maintainer email="adejonge@oakland.edu">abc</maintainer>
  <license>MIT</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
